<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:text="@string/showDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:onClick="showDialog"
        android:layout_margin="5dp"/>
    <Button
        android:text="@string/showDialogInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:onClick="showInfoDialog"
        android:layout_margin="5dp"/>
    <Button
        android:text="@string/showLoginDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:onClick="showLoginDialog"
        android:layout_margin="5dp"/>
</LinearLayout>
